# voxel-engine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: BlockId.hpp  Chunk.hpp  ChunkId.hpp  ChunkMesh.hpp  CubeMesh.hpp  DebugWindow.hpp  Logger.hpp  QuadMesh.hpp  Shader.hpp  Texture.hpp  Timer.hpp  Vertex.hpp  World.hpp
shaders/: chunk.frag  chunk.vert  cube.frag  cube.vert  quad.frag  quad.vert
src/: Chunk.cpp  ChunkId.cpp  ChunkMesh.cpp  CubeMesh.cpp  DebugWindow.cpp  Logger.cpp  QuadMesh.cpp  Shader.cpp  Texture.cpp  Timer.cpp  World.cpp
